force-app/main/default/objects/Opportunity/fields/Account_Owner_Commission__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Commission__c</fullName>
    <label>Account Owner Commission %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>