force-app/main/default/objects/Opportunity/fields/Account_Owner_Commission_Value__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Commission_Value__c</fullName>
    <formula>Amount *  Account_Owner_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Commission Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>