force-app/main/default/objects/Opportunity/fields/Active_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Active_Opportunity__c</fullName>
    <formula>IF( 
AND(ISPICKVAL(StageName , &quot;Closed Won&quot;),  Contract_period_end__c &gt; TODAY(), Contract_period_start__c &lt;=TODAY()),&quot;Yes&quot;,
IF( 
AND(ISPICKVAL(StageName , &quot;Closed Won&quot;),  Contract_period_end__c &lt;= TODAY()),&quot;No&quot;,
IF( 
AND(Probability &gt;0.19, NOT(ISPICKVAL(StageName , &quot;No Show&quot;)),  CloseDate &gt;TODAY()),&quot;Yes&quot;,
IF(
AND(ISPICKVAL(StageName, &quot;Closed Lost&quot;),  (TODAY()-LastActivityDate)/30&lt;6),&quot;Yes&quot;,&quot;No&quot;
))))</formula>
    <label>Active Opportunity?</label>
    <type>Text</type>
</CustomField>