force-app/main/default/objects/Opportunity/fields/Activity_Warning__c.field-meta.xml
<CustomField>
    <fullName>Activity_Warning__c</fullName>
    <formula>IF(  NOT(Has_Open_Activity__c),
       IMAGE(&apos;https://brameag2--sandboxad--c.sandbox.vf.force.com/resource/1711715102000/NoOpenActivitiesWarning?&apos;, &apos;No Open Activites&apos; , 35, 70) ,
      &apos;&apos;)</formula>
    <label>Activity Warning</label>
    <type>Text</type>
</CustomField>