force-app/main/default/objects/Opportunity/fields/Ad_Impressions__c.field-meta.xml
<CustomField>
    <fullName>Ad_Impressions__c</fullName>
    <formula>( Amount / CPM__c ) * 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ad Impressions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>