force-app/main/default/objects/Opportunity/fields/ARR_Amount__c.field-meta.xml
<CustomField>
    <fullName>ARR_Amount__c</fullName>
    <label>ARR Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>