force-app/main/default/objects/Opportunity/fields/Autority__c.field-meta.xml
<CustomField>
    <fullName>Autority__c</fullName>
    <inlineHelpText>Who is the decision-maker?</inlineHelpText>
    <label>Authority</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>