force-app/main/default/objects/Opportunity/fields/Backlog_Reason__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Reason__c</fullName>
    <label>Backlog Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other priorities</fullName>
            </value>
            <value>
                <fullName>Other partner / competition</fullName>
            </value>
            <value>
                <fullName>Too early / wrong time</fullName>
            </value>
            <value>
                <fullName>No use case</fullName>
            </value>
            <value>
                <fullName>Too expensive</fullName>
            </value>
            <value>
                <fullName>No budget</fullName>
            </value>
            <value>
                <fullName>no answer</fullName>
            </value>
            <value>
                <fullName>Wrong Person</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>