force-app/main/default/objects/Opportunity/fields/Backlog_Task__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Backlog Task</label>
    <type>Checkbox</type>
</CustomField>