force-app/main/default/objects/Opportunity/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <inlineHelpText>What is their spending ability?</inlineHelpText>
    <label>Budget</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>