force-app/main/default/objects/Opportunity/fields/Campaign_Costs_EUR__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Costs_EUR__c</fullName>
    <inlineHelpText>Total Amount in CHF (eCPM Media + Targeting Costs + DSP Fees) converted in EUR</inlineHelpText>
    <label>Campaign Costs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>