force-app/main/default/objects/Opportunity/fields/Campaign_Information__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Information__c</fullName>
    <label>Campaign Information</label>
    <type>TextArea</type>
</CustomField>