force-app/main/default/objects/Opportunity/fields/Campaign_Manager__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>