force-app/main/default/objects/Opportunity/fields/Campaign_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Reminder_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Campaign Reminder Sent?</label>
    <type>Checkbox</type>
</CustomField>