force-app/main/default/objects/Opportunity/fields/Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the Opportunity is cloned from another Opportunity, it stores the relationship to the original one</description>
    <label>Cloned From</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cloned Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>