force-app/main/default/objects/Opportunity/fields/Close_Date_Locked__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close Date Locked</label>
    <type>Checkbox</type>
</CustomField>