force-app/main/default/objects/Opportunity/fields/Close_Date_Period__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Period__c</fullName>
    <formula>IF(
    AND(
        ISPICKVAL(StageName, &quot;Closed Won&quot;),
        CloseDate &gt;= DATE(YEAR(TODAY()), MONTH(TODAY())-1, 1),
        CloseDate &lt;= DATE(YEAR(TODAY()), MONTH(TODAY())-1, DAY(DATE( YEAR(TODAY()), MONTH(TODAY()), 1) - 1))
    ),
    TRUE,
    FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date Period</label>
    <type>Checkbox</type>
</CustomField>