force-app/main/default/objects/Opportunity/fields/Closed_Lost_Description__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Description__c</fullName>
    <label>Closed Lost Description</label>
    <type>TextArea</type>
</CustomField>