force-app/main/default/objects/Opportunity/fields/ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate__c</fullName>
    <inlineHelpText>Automatically updated and required to set the Close Date</inlineHelpText>
    <label>ClosedDate</label>
    <type>Date</type>
</CustomField>