force-app/main/default/objects/Opportunity/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <formula>IF(CONTAINS(&quot;Tailor_Made: Renewal: Single_Campaign&quot;,TEXT(Type)), 0.05,
IF(CONTAINS(&quot;Addon: Services: License_Upgrade&quot;,TEXT(Type)),0.1,
IF(ISPICKVAL(Lead_Category__c, &quot;Own Sourced&quot;),0.12,
IF(ISPICKVAL(Lead_Category__c, &quot;Company Sourced&quot;),0.08,
IF(ISPICKVAL(Lead_Category__c, &quot;Inbound&quot;),0.05,0)
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>