force-app/main/default/objects/Opportunity/fields/Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount__c</fullName>
    <formula>IF(ISPICKVAL( StageName , &quot;Closed Won&quot;), (ExpectedRevenue  *  Commission__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Revenue Amount the record Owner is eligible for, based on the currently active Commission Model.</inlineHelpText>
    <label>Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>