force-app/main/default/objects/Opportunity/fields/Commission_Status__c.field-meta.xml
<CustomField>
    <fullName>Commission_Status__c</fullName>
    <formula>IF( 
   AND(TEXT(StageName)=&quot;Closed Won&quot;,  Commission_Paid__c = FALSE,  Invoice_Paid__c = FALSE), &quot;Eligible&quot;,
IF( 
   AND(TEXT(StageName)=&quot;Closed Won&quot;,  Commission_Paid__c = FALSE,  Invoice_Paid__c = TRUE), &quot;Outstanding&quot;,
IF( 
   AND(TEXT(StageName)=&quot;Closed Won&quot;,  Commission_Paid__c = TRUE), &quot;Paid&quot;,&quot;N/A&quot;
  )))</formula>
    <label>Commission Status</label>
    <type>Text</type>
</CustomField>