force-app/main/default/objects/Opportunity/fields/Committed_Form_Sent__c.field-meta.xml
<CustomField>
    <fullName>Committed_Form_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Committed Form Sent?</label>
    <type>Checkbox</type>
</CustomField>