force-app/main/default/objects/Opportunity/fields/Consulting_Fee_EUR__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Fee_EUR__c</fullName>
    <inlineHelpText>in EUR</inlineHelpText>
    <label>Consulting Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>