force-app/main/default/objects/Opportunity/fields/Contract_period_end__c.field-meta.xml
<CustomField>
    <fullName>Contract_period_end__c</fullName>
    <label>Contract period end</label>
    <type>Date</type>
</CustomField>