force-app/main/default/objects/Opportunity/fields/Contract_period_start__c.field-meta.xml
<CustomField>
    <fullName>Contract_period_start__c</fullName>
    <label>Contract period start</label>
    <type>Date</type>
</CustomField>