force-app/main/default/objects/Opportunity/fields/Contributor_User_Division__c.field-meta.xml
<CustomField>
    <fullName>Contributor_User_Division__c</fullName>
    <formula>Opportunity_Contributor__r.Division</formula>
    <label>Contributor User Division</label>
    <type>Text</type>
</CustomField>