force-app/main/default/objects/Opportunity/fields/Creative_Type__c.field-meta.xml
<CustomField>
    <fullName>Creative_Type__c</fullName>
    <label>Creative Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Memory</fullName>
            </value>
            <value>
                <fullName>Personality Test</fullName>
            </value>
            <value>
                <fullName>Quiz</fullName>
            </value>
            <value>
                <fullName>Spin-the-Wheel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>