force-app/main/default/objects/Opportunity/fields/Creatives_in_Total__c.field-meta.xml
<CustomField>
    <fullName>Creatives_in_Total__c</fullName>
    <label>Creatives in Total</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>