force-app/main/default/objects/Opportunity/fields/Data_Quality_Review_Done__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Review_Done__c</fullName>
    <description>It is used to specify whether the Sales Ops Team did a data quality review of this record.</description>
    <inlineHelpText>It is used to specify whether the Sales Ops Team did a data quality review of this record.</inlineHelpText>
    <label>Sales Ops Reviewed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>