force-app/main/default/objects/Opportunity/fields/Debriefing_Date__c.field-meta.xml
<CustomField>
    <fullName>Debriefing_Date__c</fullName>
    <label>Debriefing Date</label>
    <type>Date</type>
</CustomField>