force-app/main/default/objects/Opportunity/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <formula>Impressions_Delivered__c / Ad_Impressions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>