force-app/main/default/objects/Opportunity/fields/Delivery_eCPM_EUR__c.field-meta.xml
<CustomField>
    <fullName>Delivery_eCPM_EUR__c</fullName>
    <formula>IF(NOT(ISPICKVAL(CurrencyIsoCode,&quot;EUR&quot;)),
  (CURRENCYRATE(&quot;EUR&quot;) * Amount),
   Amount)
/
 Impressions_Delivered__c
* 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>in EUR</inlineHelpText>
    <label>Delivery eCPM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>