force-app/main/default/objects/Opportunity/fields/Demo_Login_Account__c.field-meta.xml
<CustomField>
    <fullName>Demo_Login_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo Login Account</label>
    <type>Checkbox</type>
</CustomField>