force-app/main/default/objects/Opportunity/fields/Finance_Contact__c.field-meta.xml
<CustomField>
    <fullName>Finance_Contact__c</fullName>
    <label>Finance Contact</label>
    <type>Email</type>
</CustomField>