force-app/main/default/objects/Opportunity/fields/Has_Open_Activity__c.field-meta.xml
<CustomField>
    <fullName>Has_Open_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Open Activity</label>
    <type>Checkbox</type>
</CustomField>