force-app/main/default/objects/Opportunity/fields/ICP__c.field-meta.xml
<CustomField>
    <fullName>ICP__c</fullName>
    <label>ICP</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry_Level_2__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>ICP_Global_Value_Set</valueSetName>
    </valueSet>
</CustomField>