force-app/main/default/objects/Opportunity/fields/Impressions_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Impressions_Delivered__c</fullName>
    <label>Impressions Delivered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>