force-app/main/default/objects/Opportunity/fields/Industry_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Industry_Level_1__c</fullName>
    <label>Industry Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry_Level_2__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Industry_Level_1_Global_Value_Set</valueSetName>
    </valueSet>
</CustomField>