force-app/main/default/objects/Opportunity/fields/isClone__c.field-meta.xml
<CustomField>
    <fullName>isClone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marked true if there is a duplicate record created</description>
    <label>isClone</label>
    <type>Checkbox</type>
</CustomField>