force-app/main/default/objects/Opportunity/fields/Latest_Child_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Latest_Child_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Child Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Latest Child Opportunity)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>