force-app/main/default/objects/Opportunity/fields/Lead_Category__c.field-meta.xml
<CustomField>
    <fullName>Lead_Category__c</fullName>
    <label>Lead Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Group__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company Sourced</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Own Sourced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>