force-app/main/default/objects/Opportunity/fields/Lead_Group__c.field-meta.xml
<CustomField>
    <fullName>Lead_Group__c</fullName>
    <label>Lead Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Network</fullName>
            </value>
            <value>
                <fullName>Fairs</fullName>
            </value>
            <value>
                <fullName>Own Media</fullName>
            </value>
            <value>
                <fullName>Own Sourced</fullName>
            </value>
            <value>
                <fullName>Paid Media</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Sales Tools</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>