force-app/main/default/objects/Opportunity/fields/Manager_Commission__c.field-meta.xml
<CustomField>
    <fullName>Manager_Commission__c</fullName>
    <label>Manager Commission %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>