force-app/main/default/objects/Opportunity/fields/Manager_Commission_Value__c.field-meta.xml
<CustomField>
    <fullName>Manager_Commission_Value__c</fullName>
    <formula>IF( CONTAINS(Owner.Division, &quot;SaaS&quot;),(Amount * Manager_Commission__c),(Amount * Manager_Commission__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Commission Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>