force-app/main/default/objects/Opportunity/fields/Manager_of_Opp_Owner__c.field-meta.xml
<CustomField>
    <fullName>Manager_of_Opp_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager of Opp Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>