force-app/main/default/objects/Opportunity/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <formula>Net_Amount_EUR__c 
/
IF(NOT(ISPICKVAL(CurrencyIsoCode,&quot;EUR&quot;)), 
  (MCEILING(CURRENCYRATE(&quot;EUR&quot;)) * Amount),
   Amount)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>