force-app/main/default/objects/Opportunity/fields/Marketfit__c.field-meta.xml
<CustomField>
    <fullName>Marketfit__c</fullName>
    <description>How well does our product fit the customer?</description>
    <label>Market Fit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>