force-app/main/default/objects/Opportunity/fields/Marketfit_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Marketfit_Explanation__c</fullName>
    <label>Marketfit Explanation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>