force-app/main/default/objects/Opportunity/fields/Need__c.field-meta.xml
<CustomField>
    <fullName>Need__c</fullName>
    <inlineHelpText>What immediate needs or urgent problems are there?</inlineHelpText>
    <label>Need</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>