force-app/main/default/objects/Opportunity/fields/Net_Amount_EUR__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount_EUR__c</fullName>
    <formula>IF(NOT(ISPICKVAL(CurrencyIsoCode,&quot;EUR&quot;)),
  (CURRENCYRATE(&quot;EUR&quot;) * Amount),
   Amount)
-  Campaign_Costs_EUR__c 
-  Consulting_Fee_EUR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>in EUR</inlineHelpText>
    <label>Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>