force-app/main/default/objects/Opportunity/fields/No_of_Primary_Contacts__c.field-meta.xml
<CustomField>
    <fullName>No_of_Primary_Contacts__c</fullName>
    <label>No. of Primary Contacts</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>