force-app/main/default/objects/Opportunity/fields/Opp_Contributor_Commission_Value__c.field-meta.xml
<CustomField>
    <fullName>Opp_Contributor_Commission_Value__c</fullName>
    <formula>IF(
   CONTAINS(Opportunity_Contributor__r.Division, &quot;BDR&quot;), 
   (Amount * Opp_Contributor_Commission__c) + Own_Appointment_Commission_Value__c ,
      IF(
      ISBLANK( Opportunity_Contributor__c ),
        0,
        (Amount  * Opp_Contributor_Commission__c))
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Contributor Commission Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>