force-app/main/default/objects/Opportunity/fields/Opp_Owner_Commission__c.field-meta.xml
<CustomField>
    <fullName>Opp_Owner_Commission__c</fullName>
    <label>Opp Owner Commission %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>