force-app/main/default/objects/Opportunity/fields/Opp_Owner_Commission_Value__c.field-meta.xml
<CustomField>
    <fullName>Opp_Owner_Commission_Value__c</fullName>
    <formula>IF( CONTAINS(Owner.Division, &quot;Playable&quot;),( Net_Amount_EUR__c * Opp_Owner_Commission__c ), (Amount * Opp_Owner_Commission__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Owner Commission Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>