force-app/main/default/objects/Opportunity/fields/Opp_Owner_Title__c.field-meta.xml
<CustomField>
    <fullName>Opp_Owner_Title__c</fullName>
    <formula>Owner.Title</formula>
    <label>Opp Owner Title</label>
    <type>Text</type>
</CustomField>